objects/ASI_CRM_Price_And_Discount__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimated_annual_order_amount__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Estimated_annual_order_amount__c</formula>
        <label>Estimated Annual Order Amount in CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SYS_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS_Send_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Gross_Sales_Impact__c</fullName>
        <label>Total Gross Sales Impact</label>
        <summarizedField>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_CN_Gross_Sales_Impact_RollUp__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_New_Price__c</fullName>
        <label>Total New Price</label>
        <summarizedField>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_New_Price_BT_with_VAT__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Channel_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Region__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_To__c</fullName>
        <defaultValue>DATE(2050,12,31)</defaultValue>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_IHBR_Price_Type__c</fullName>
        <label>IHBR Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Price</fullName>
                </value>
                <value>
                    <fullName>Promotion Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Master_Reference_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Master Reference Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Repacking Price Request, CN Repacking Price Request RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_CN_NPL_Item_Master__c.ASI_CN_NPL_Item_Master_Type__c</field>
                <operation>equals</operation>
                <value>Repack</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN NPL T1 Price Request, CN NPL T1 Price Request RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_CN_NPL_Item_Master__c.ASI_CN_NPL_Item_Master_Type__c</field>
                <operation>equals</operation>
                <value>NPL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CN_NPL_Item_Master__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Code__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Master_Price_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler Code (Rebate)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Price_And_Discount__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Master Price Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Rebate Against This Price Group</relationshipLabel>
        <relationshipName>Price_And_Discounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_NPL_Reference_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPL Reference Number</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_Of_Detail_Cannot_be_Approved__c</fullName>
        <label>No of Detail Which Cannot be Approved</label>
        <summaryFilterItems>
            <field>ASI_CRM_Price_And_Discount_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SG Price and Detail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_SG_Cannot_Submit_for_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ReasonForThePriceIsLowerThanT1__c</fullName>
        <label>Reason For The Price Is Lower Than T1:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason_for_Investment__c</fullName>
        <label>Reason for Investment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <inlineHelpText>请使用英语填写价格申请的原因以及目的</inlineHelpText>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SGComplimentary_Product_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group (Purchase Condition)</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Active__c</fullName>
        <formula>IF( TODAY() &gt;=  ASI_CRM_SG_Effective_Date__c  &amp;&amp; TODAY() &lt;=  ASI_CRM_SG_Expiry_Date__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Benchmark_Price_Type__c</fullName>
        <label>Benchmark Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WS</fullName>
                    <label>Wholesaler Price</label>
                </value>
                <value>
                    <fullName>W1</fullName>
                    <label>Open Outlet Price</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Bottle_Back_Rebate_Amount__c</fullName>
        <label>Bottle: Back Rebate Amount per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Budget_Net_Price__c</fullName>
        <label>Budget Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Condition__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ASI_CRM_SG_Portfolio_Rebate&quot;,

&quot;Buy &quot; &amp; text( ASI_CRM_SG_Portfolio_Min_Bottles_Placed__c ) &amp; &quot; bottles of &quot; &amp; ASI_CRM_SGComplimentary_Product_Grouping__r.Name  &amp; &quot;within first week of the month to entitle $&quot; &amp;  Text( ASI_CRM_SG_Portfolio_Back_Rebate_Amount__c) &amp; &quot;per bottle rebate from first 2 orders of &quot; &amp;  ASI_CRM_SG_Product_Grouping__r.Name   &amp;&quot; within first week of the month&quot;, null) + 

 

IF( RecordType.DeveloperName = &quot;ASI_CRM_SG_Open_Outlet_Marketing_Fund&quot;,

&quot;Sales of &quot; &amp; ASI_CRM_SG_Product_Grouping__r.Name &amp; &quot;to non-contracted outlet to entitle $&quot;&amp;  Text(ASI_CRM_SG_Marketing_Fund_for_sales_OO__c)  &amp; &quot; rebate per bottle&quot;  , null)


+ 


IF( RecordType.DeveloperName = &quot;ASI_CRM_SG_First_Week_Order_Rebate&quot;,

&quot;Buy &quot;&amp;  Text(ASI_CRM_SG_Tier_1_Min_Bottles_Placed__c ) &amp; &quot; bottles of &quot;&amp;  ASI_CRM_SG_Product_Grouping__r.Name &amp;&quot;within first week to entitle $&quot;&amp; Text( ASI_CRM_SG_Tier_1_Back_Rebate_Amount__c  ) &amp; &quot; rebate per bottle&quot; , null)



+ 


IF( RecordType.DeveloperName = &quot;ASI_CRM_SG_Bottle_Rebate&quot;,

&quot;For Wholesaler of &quot;&amp; Text( ASI_CRM_SG_Wholesaler_Code__c  ) &amp;&quot; customer group, buy bottles of &quot;&amp;  ASI_CRM_SG_Product_Grouping__r.Name &amp;&quot;to entitle $&quot;&amp; Text(  ASI_CRM_SG_Bottle_Back_Rebate_Amount__c )  &amp; &quot; rebate per bottle&quot; , null)</formula>
        <label>Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Hightest_Rebate_Amount__c</fullName>
        <formula>IF(

not(isblank( ASI_CRM_SG_Tier_3_Back_Rebate_Amount__c )), ASI_CRM_SG_Tier_3_Back_Rebate_Amount__c,

IF(not(isblank(ASI_CRM_SG_Tier_2_Back_Rebate_Amount__c )), 
 ASI_CRM_SG_Tier_2_Back_Rebate_Amount__c ,
 ASI_CRM_SG_Tier_1_Back_Rebate_Amount__c 

))</formula>
        <label>Hightest Rebate Amount For Tiers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Latest_Price_And_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Price And Discount</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discounts (Latest Price And Discount)</relationshipLabel>
        <relationshipName>Price_And_Discounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Marketing_Fund_for_sales_OO__c</fullName>
        <label>Marketing Fund for sales in Open Outlet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Master_Price_Group_ID__c</fullName>
        <description>This is the control field for duplication rule to stop users from creating another draft against the same master.</description>
        <label>Master Price Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Master_Price_Group_Name__c</fullName>
        <label>Master Price Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Master_Price_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Price Group</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price Group Versions</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Master_Rebate_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Rebate Period</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Rebates Against This Period</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Master_Rebate_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Next_Price_And_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Price And Discount</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discounts (Next Price And Discount)</relationshipLabel>
        <relationshipName>Price_And_Discounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_of_Price_Group__c</fullName>
        <label>No of Price Group</label>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_PRICEGROUP_Status__c</fullName>
        <label>Price Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <label>Approval In Process</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Portfolio_Back_Rebate_Amount__c</fullName>
        <label>Portfolio: Back Rebate Amount per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Portfolio_Min_Bottles_Placed__c</fullName>
        <label>Portfolio: Min Bottles Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Previous_Price_And_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Price And Discount</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discounts (Previous Price And Discount)</relationshipLabel>
        <relationshipName>Price_And_Discounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Price_Group_Description__c</fullName>
        <formula>CASE( 
	Text(ASI_CRM_SG_Wholesaler_Code__c), 
		&apos;AE&apos;,&apos;Alcohol Empire&apos;,
		&apos;AS&apos;,&apos;Asher&apos;,
		&apos;BB&apos;,&apos;Bottles &amp; Bottles&apos;,
		&apos;BS&apos;,&apos;1855 The Bottle Shop&apos;,
		&apos;BSS&apos;,&apos;Best Spirits Pte Ltd&apos;,
		&apos;BUZ&apos;,&apos;BUZZ&apos;,
		&apos;CEW&apos;,&apos;Century Wines&apos;,
		&apos;CJD&apos;,&apos;Chia Ju Duty Free&apos;,
		&apos;CS&apos;,&apos;Cold Storage Supermarket&apos;,
		&apos;CW&apos;,&apos;Crystal Wines&apos;,
		&apos;DD&apos;,&apos;Don Don Donki&apos;,
		&apos;ECM&apos;,&apos;E-COMMERCE&apos;,
		&apos;ET&apos;,&apos;Eternity Pte Ltd&apos;,
		&apos;FAB&apos;,&apos;Fairbreeze - DF&apos;,
		&apos;FLA&apos;,&apos;Farmland Asia&apos;,
		&apos;GAD&apos;,&apos;Galiena - DF&apos;,
		&apos;GAL&apos;,&apos;Galiena&apos;,
		&apos;HBA&apos;,&apos;Heritage Beverages Asia&apos;,
		&apos;HS&apos;,&apos;Hoekstene&apos;,
		&apos;HTH&apos;,&apos;Hock Tong Huat&apos;,
		&apos;IDS&apos;,&apos;INDIVIDUAL DIRECT SALES&apos;,
		&apos;IS&apos;,&apos;Isetan&apos;,
		&apos;IVO&apos;,&apos;Invivo&apos;,
		&apos;KAI&apos;,&apos;Kaimay&apos;,
		&apos;KM&apos;,&apos;Kingsman&apos;,
		&apos;LM&apos;,&apos;La Maison Du Whisky&apos;,
		&apos;LPT&apos;,&apos;Le Petit Depot&apos;,
		&apos;LR&apos;,&apos;Le Rouge&apos;,
		&apos;MAG&apos;,&apos;Magnum&apos;,
		&apos;MAI&apos;,&apos;Maison Anli Pte Ltd&apos;,
		&apos;MIE&apos;,&apos;Millies Enterprise&apos;,
		&apos;MRO&apos;,&apos;Mr Otaru&apos;,
		&apos;MY&apos;,&apos;Medi Ya&apos;,
		&apos;OC&apos;,&apos;The Oaks Cellars&apos;,
		&apos;OG&apos;,&apos;Oasis Global&apos;,
		&apos;OLO&apos;,&apos;OLE OLE&apos;,
		&apos;PDN&apos;,&apos;Food Panda&apos;,
		&apos;PN&apos;,&apos;Paneco&apos;,
		&apos;RM&apos;,&apos;RedMart&apos;,
		&apos;SM&apos;,&apos;Supermarket&apos;,
		&apos;ST&apos;,&apos;Staff Purchase&apos;,
		&apos;SUT&apos;,&apos;SUTL - DF&apos;,
		&apos;SX&apos;,&apos;Sheng Siong&apos;,
		&apos;TLS&apos;,&apos;The Liquor Shop&apos;,
		&apos;W1&apos;,&apos;Open Outlet Price&apos;,
		&apos;W2&apos;,&apos;Contracted Outlet Price&apos;,
		&apos;WD&apos;,&apos;Whisky Distillery&apos;,
		&apos;WS&apos;,&apos;Wholesaler Price&apos;,
		&apos;WSS&apos;,&apos;Sub Wholesaler Price&apos;,
		&apos;ZCQ&apos;,&apos;Zouk Clark Quay - DF&apos;,
&apos;LAF&apos;,&apos;La Flor&apos;,
&apos;HAN&apos;,&apos;House of Amber Nectar&apos;,
&apos;PIV&apos;,&apos;Pivene&apos;,
	Text(ASI_CRM_SG_Wholesaler_Code__c)
)</formula>
        <label>Price Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Price_Group_Name__c</fullName>
        <label>Price Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Product_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Rebate SG</description>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG Item Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Price And Discounts (Product Grouping)</relationshipLabel>
        <relationshipName>Price_And_Discounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Rebate_Start_Date__c</fullName>
        <label>Rebate Start Date (For Duplicate Rule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Record_Type_Dev_Name_Custom__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Dev Name Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_1_Back_Rebate_Amount__c</fullName>
        <label>Tier 1: Back Rebate Amount per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_1_Min_Bottles_Placed__c</fullName>
        <label>Tier 1: Min Bottles Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_2_Back_Rebate_Amount__c</fullName>
        <label>Tier 2: Back Rebate Amount per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_2_Min_Bottles_Placed__c</fullName>
        <label>Tier 2: Min Bottles Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_3_Back_Rebate_Amount__c</fullName>
        <label>Tier 3: Back Rebate Amount per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Tier_3_Min_Bottles_Placed__c</fullName>
        <label>Tier 3: Min Bottles Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wholesaler_Code__c</fullName>
        <label>Wholesaler Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BSS</fullName>
                </value>
                <value>
                    <fullName>BUZ</fullName>
                </value>
                <value>
                    <fullName>CEW</fullName>
                </value>
                <value>
                    <fullName>CJD</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FAB</fullName>
                </value>
                <value>
                    <fullName>FLA</fullName>
                </value>
                <value>
                    <fullName>GAD</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>HAN</fullName>
                </value>
                <value>
                    <fullName>HBA</fullName>
                </value>
                <value>
                    <fullName>HS</fullName>
                </value>
                <value>
                    <fullName>HTH</fullName>
                </value>
                <value>
                    <fullName>IDS</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IVO</fullName>
                </value>
                <value>
                    <fullName>KAI</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>LAF</fullName>
                </value>
                <value>
                    <fullName>LM</fullName>
                </value>
                <value>
                    <fullName>LPT</fullName>
                </value>
                <value>
                    <fullName>LR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending for BO to PRCSW Pirce</fullName>
                </value>
                <value>
                    <fullName>Pending for PRCSW to PRC Price</fullName>
                </value>
                <value>
                    <fullName>Pending for T1 Price</fullName>
                </value>
                <value>
                    <fullName>Pending for add to order form</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_Discounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_DiscountsYgCV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Total_Amount_for_Approval__c</fullName>
        <formula>IF(
 OR(
  AND(
   ASI_CRM_Customer__r.ASI_CRM_CN_Is_IHBR_Outlet__c,
   ISPICKVAL(ASI_CRM_Customer__r.ASI_CRM_CN_Commercial_Team__c, &apos;HQ/Hotel&apos;) 
  ),
  ASI_CRM_Customer__r.ASI_CRM_VIP__c
 ),
 IF(ASI_CRM_CN_Total_Gross_Sales_Impact__c &gt; 0,
  ASI_CRM_Customer__r.ASI_CRM_CN_Estimated_annual_order_amount__c,
  ASI_CRM_CN_Total_Gross_Sales_Impact__c
 ),
 ASI_CRM_CN_Total_Gross_Sales_Impact__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys Total Amount for Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPL T1 Price Request</fullName>
                </value>
                <value>
                    <fullName>Repacking Price Request</fullName>
                </value>
                <value>
                    <fullName>T1 Price Adjustment Request</fullName>
                </value>
                <value>
                    <fullName>Customer Price and Discount Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Based_Mechanics__c</fullName>
        <label>Volume Based Mechanics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volume Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Customer_Type__c</fullName>
        <formula>IF(CONTAINS(ASI_CRM_Customer__r.RecordType.Name,&apos;Wholesaler&apos;) , &apos;Wholesaler&apos;, 
IF(CONTAINS(ASI_CRM_Customer__r.RecordType.Name,&apos;Outlet&apos;) , &apos;Outlet&apos;,NULL) )</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Is_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Import</label>
        <type>Checkbox</type>
    </fields>
    <label>Price And Discount</label>
    <listViews>
        <fullName>ASI_CRM_CN_Customer_Pending_for_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_Customer_Price_and_Discount_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for T1 Price,Approved</value>
        </filters>
        <label>Customer - Pending for T1 Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_CN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_BO_to_PRCSW_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for BO to PRCSW Pirce</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/11/2015 12:00 AM</value>
        </filters>
        <label>NP 1. Pending for BO to PRCSW Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_CN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_PRCSW_to_PRC_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for PRCSW to PRC Price</value>
        </filters>
        <label>NP 2. Pending for PRCSW to PRC Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_CN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>